--- a/src/build.xml
+++ b/src/build.xml
@@ -14,11 +14,11 @@ Howto build:
      
    in the directory where this file is located.
 
-   $Id: build.xml,v 1.3 2003/04/24 14:40:38 lars Exp $
+   $Id: build.xml,v 1.1 2004/05/30 11:54:44 per_nyfelt Exp $
 
 -->
 
-<project name="xmldb" default="main" basedir=".">
+<project name="xmldb.xapi.api" default="main" basedir=".">
 
   <!-- =================================================================== -->
   <!-- Initializes the build process                                       -->
@@ -66,7 +66,7 @@ Howto build:
   </target> 
   
   <!-- =================================================================== -->
-  <!-- Compiles the XML:DB API sources                                -->
+  <!-- Compiles the XML:DB API sources                                     -->
   <!-- =================================================================== -->
   <target name="compile" depends="prepare">  
      <echo message="Compiling XML:DB API - Interfaces"/>
