Include java doc for commons in dist build

--- a/idl/Makefile
+++ b/idl/Makefile
@@ -2,6 +2,7 @@ SOURCES = `find . -name "*.idl"`
 BUILD = ../build/interfaces
 
 interfaces:
+	mkdir -p $(BUILD)
 	rm -r $(BUILD)
 	mkdir -p $(BUILD) 
 	#idlj -td $(BUILD) $(SOURCES)
@@ -13,8 +14,12 @@ interfaces:
 	idlj -f server -td $(BUILD) TransactionService.idl
 	idlj -f server -td $(BUILD) XUpdateQueryService.idl
 	idlj -f server -td $(BUILD) XQueryService.idl
+	idlj -f server -td $(BUILD) DatabaseInstanceManagerService.idl
+	idlj -f server -td $(BUILD) security.idl
+	idlj -f server -td $(BUILD) UserManagementService.idl
 	rm $(BUILD)/org/xmldb/api/base/*POA.java
 	rm $(BUILD)/org/xmldb/api/base/*Helper.java
 	rm $(BUILD)/org/xmldb/api/base/*Holder.java
+	rm $(BUILD)/org/xmldb/api/base/security/*POA.java	
 	rm $(BUILD)/org/xmldb/api/modules/*POA.java
 
