--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,9 @@
         <ant dir="src" target="javadoc-spec" inheritall="false">
               <property name="build.doc" value="${build.dir}" /> 
         </ant>
+        <ant dir="src" target="javadoc-full" inheritall="false">
+              <property name="build.doc" value="${build.dir}" />
+        </ant>
     </target>
 
     <!--======================================================================
