--- a/src/build.xml
+++ b/src/build.xml
@@ -14,7 +14,7 @@ Howto build:
      
    in the directory where this file is located.
 
-   $Id: build.xml,v 1.2 2004/06/06 10:54:23 per_nyfelt Exp $
+   $Id: build.xml,v 1.3 2004/06/08 19:45:02 per_nyfelt Exp $
 
 -->
 
@@ -26,11 +26,13 @@ Howto build:
   <!-- default directory structure definitions -->
   <property name="root.dir" value="${basedir}"/>
   <property name="jar.dir" value="${root.dir}/lib"/>
-  <property name="src.dir" value="${root.dir}/api"/>  
+  <property name="src.dir" value="${root.dir}/api"/>
+  <property name="common.src.dir" value="${root.dir}/common"/>
   <property name="build.dir" value="${root.dir}/build"/>
   <property name="build.doc" value="${build.dir}/javadoc"/>
   <property name="api.build.dir" value="${build.dir}/classes-api"/>
   <property name="sdk.build.dir" value="${build.dir}/classes-sdk"/>
+  <property name="common.build.dir" value="${build.dir}/common"/>
   <property name="dist.build.dir" value="${root.dir}/dist/xmldb"/>
   
   <property name="javadoc.pkgs" value="org.xmldb.*"/>
@@ -61,16 +63,17 @@ Howto build:
   <target name="prepare" depends="init">
     <mkdir dir="${api.build.dir}"/>
     <mkdir dir="${sdk.build.dir}"/>
+    <mkdir dir="${common.build.dir}"/>
     <mkdir dir="${jar.dir}"/>
   </target>
  
-  <target name="main" depends="compile, compile-sdk, bin-jar, bin-jar-sdk">
+  <target name="main" depends="compile-api, compile-sdk, bin-jar, bin-jar-sdk">
   </target> 
   
   <!-- =================================================================== -->
   <!-- Compiles the XML:DB API sources                                     -->
   <!-- =================================================================== -->
-  <target name="compile" depends="prepare">  
+  <target name="compile-api" depends="prepare">
      <echo message="Compiling XML:DB API - Interfaces"/>
      <javac srcdir="${src.dir}"
            destdir="${api.build.dir}"
@@ -79,7 +82,7 @@ Howto build:
          <!--classpath refid="project.classpath"/-->
   </target>
 
-  <target name="bin-jar" depends="prepare, compile">
+  <target name="bin-jar" depends="prepare, compile-api">
     <jar jarfile="${jar.dir}/${jarname}.jar"
          basedir="${api.build.dir}"
     />
@@ -88,7 +91,7 @@ Howto build:
   <target name="sdk" depends="compile-sdk, bin-jar-sdk">
   </target> 
   
-  <target name="compile-sdk" depends="prepare, compile">  
+  <target name="compile-sdk" depends="prepare, compile-api">
      <echo message="Compiling XML:DB API -  SDK"/>
      <javac srcdir="${src.dir}"
            destdir="${sdk.build.dir}"
@@ -104,7 +107,19 @@ Howto build:
          basedir="${sdk.build.dir}"
     />
   </target>
-  
+
+    <!-- =================================================================== -->
+    <!-- Compiles the XML:DB Common sources                                     -->
+    <!-- =================================================================== -->
+
+    <target name="compile-common" depends="prepare">
+         <echo message="Compiling XML:DB common"/>
+         <javac srcdir="${common.src.dir}"
+               destdir="${common.build.dir}"
+               classpathref="project.classpath" />
+             <!--classpath refid="project.classpath"/-->
+      </target>
+
   <!-- =================================================================== -->
   <!-- Tasks to manage execution of tests                                  -->
   <!-- =================================================================== -->
@@ -128,21 +143,25 @@ Howto build:
   <!-- =================================================================== -->
   <!-- Build Full API docs including SDK files                             -->
   <!-- =================================================================== -->
-  <target name="javadoc" depends="prepare">
+  <target name="javadoc-full" depends="prepare">
     <delete dir="${build.doc}/full"/>
 
         <mkdir dir="${build.doc}/full"/>
 
-        <javadoc packagenames="org.xmldb.**"
-            sourcepath="${src.dir}"
+        <javadoc packagenames="org.xmldb.*"
             destdir="${build.doc}/full"
             public="true"
             version="true"
             author="true"
             doctitle="XML:DB API Specification"
             header="&lt;b&gt;XML:DB API&lt;/b&gt;"
-            bottom="&lt;font size=2&gt;Copyright (C) &lt;a href=http://www.xmldb.org&gt;XML:DB Initiative&lt;/a&gt;. All rights reserved.%lt;/font&gt;"
-            classpathref="project.classpath"/>
+            bottom="&lt;font size=2&gt;Copyright (C) &lt;a href=http://xmldb-org.sourceforge.net&gt;XML:DB Initiative&lt;/a&gt;. All rights reserved.%lt;/font&gt;"
+            classpathref="project.classpath">
+
+            <sourcepath path="${src.dir}"/>
+            <sourcepath path="${common.src.dir}"/>
+
+        </javadoc>
 
   </target>
   
@@ -165,14 +184,14 @@ Howto build:
             author="true"
             doctitle="XML:DB API Specification"
             header="&lt;b&gt;XML:DB API&lt;/b&gt;"
-            bottom="&lt;font size=2&gt;Copyright (C) &lt;a href=http://www.xmldb.org&gt;XML:DB Initiative&lt;/a&gt;. All rights reserved.%lt;/font&gt;"
+            bottom="&lt;font size=2&gt;Copyright (C) &lt;a href=http://xmldb-org.sourceforge.net&gt;XML:DB Initiative&lt;/a&gt;. All rights reserved.%lt;/font&gt;"
             classpathref="project.classpath"/>
   </target>
   
   <!-- =================================================================== -->
   <!-- Builds the distribution tar and zips                                -->
   <!-- =================================================================== -->
-  <target name="dist" depends="main, sdk, javadoc, setup, clean-build">
+  <target name="dist" depends="main, sdk, javadoc-full, setup, clean-build">
     
     <mkdir dir="${dist.build.dir}"/>
         
@@ -208,6 +227,7 @@ Howto build:
   <target name="clean-build">
     <delete dir="${build.dir}"/>
     <delete dir="${sdk.build.dir}"/>
+    <delete dir="${common.build.dir}"/>
   </target>
   
   <target name="clean-jar">
