--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -12,7 +10,7 @@
 
     <groupId>org.exist-db.thirdparty.org.xmldb</groupId>
     <artifactId>xmldb-api</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>20040731</version>
 
     <name>xmldb-api</name>
     <description>XML:DB API patched for eXist-db</description>
@@ -23,7 +21,8 @@
         <connection>scm:git:https://github.com/exist-db/xmldb-org.git</connection>
         <developerConnection>scm:git:https://github.com/exist-db/xmldb-org.git</developerConnection>
         <url>scm:git:https://github.com/exist-db/xmldb-org.git</url>
-    </scm>
+      <tag>xmldb-api-20040731</tag>
+  </scm>
 
     <licenses>
         <license>
