--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>org.exist-db.thirdparty.org.xmldb</groupId>
     <artifactId>xmldb-api</artifactId>
-    <version>1.1-patched</version>
+    <version>1.2-patched-SNAPSHOT</version>
 
     <name>xmldb-api</name>
     <description>XML:DB API patched for eXist-db</description>
@@ -21,7 +21,7 @@
         <connection>scm:git:https://github.com/exist-db/xmldb-org.git</connection>
         <developerConnection>scm:git:https://github.com/exist-db/xmldb-org.git</developerConnection>
         <url>scm:git:https://github.com/exist-db/xmldb-org.git</url>
-      <tag>xmldb-api-1.1-patched</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <licenses>
