--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ ext {
 defaultTasks 'build'
 
 group = 'net.sf.xmldb-org'
-version = '1.6.0-SNAPSHOT'
+version = '1.6.0'
 
 repositories {
     jcenter()
