--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'signing'
     id 'jacoco'
     id 'maven-publish'
+    id "me.champeau.gradle.jmh" version "0.4.6"
     id 'net.nemerosa.versioning' version '2.8.2'
 }
 
@@ -14,21 +15,21 @@ ext {
     buildTime = new SimpleDateFormat('HH:mm:ss.SSSZ').format(buildTimeAndDate)
 }
 
-defaultTasks 'build'
-
 group = 'net.sf.xmldb-org'
-version = '1.7.0-SNAPSHOT'
+version = '1.7.0'
 
 repositories {
     jcenter()
     mavenCentral()
 }
+
 dependencies {
     testCompile 'org.hamcrest:hamcrest:2.1'
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.2'
     testCompile 'org.junit.jupiter:junit-jupiter-params:5.3.2'
     testCompile 'org.mockito:mockito-core:2.23.4'
     testCompile 'org.mockito:mockito-junit-jupiter:2.23.4'
+    testCompile 'org.openjdk.jmh:jmh-core:1.21'
     
     testRuntime 'org.mockito:mockito-core:1.10.19'
     testRuntime 'org.junit.platform:junit-platform-runner:1.3.2'
@@ -72,6 +73,13 @@ jar {
             include 'LICENSE'
         }
     }
+}
+
+jmh {
+//    include = 'org\\.openjdk\\.jmh\\.samples\\.JMHSample_01_HelloWorld.*'
+    humanOutputFile = null
+    warmupIterations = 1
+    iterations = 1
 }
 
 test {
