--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ plugins {
     id 'signing'
     id 'jacoco'
     id 'maven-publish'
-    id "me.champeau.gradle.jmh" version "0.4.6"
-    id 'net.nemerosa.versioning' version '2.8.2'
+    id 'com.github.ben-manes.versions' version '0.27.0'
+    id "me.champeau.gradle.jmh" version "0.5.0"
+    id 'net.nemerosa.versioning' version '2.11.0'
 }
 
 Date buildTimeAndDate = new Date()
@@ -24,16 +25,16 @@ repositories {
 }
 
 dependencies {
-    testCompile 'org.hamcrest:hamcrest:2.1'
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.2'
-    testCompile 'org.junit.jupiter:junit-jupiter-params:5.3.2'
-    testCompile 'org.mockito:mockito-core:2.23.4'
-    testCompile 'org.mockito:mockito-junit-jupiter:2.23.4'
-    testCompile 'org.openjdk.jmh:jmh-core:1.21'
+    testCompile 'org.hamcrest:hamcrest:2.2'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.6.0'
+    testCompile 'org.mockito:mockito-core:3.2.4'
+    testCompile 'org.mockito:mockito-junit-jupiter:3.2.4'
+    testCompile 'org.openjdk.jmh:jmh-core:1.23'
     
     testRuntime 'org.mockito:mockito-core:1.10.19'
-    testRuntime 'org.junit.platform:junit-platform-runner:1.3.2'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
+    testRuntime 'org.junit.platform:junit-platform-runner:1.6.0'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
 }
 
 task sourcesJar(type: Jar) {
@@ -87,6 +88,19 @@ test {
     testLogging {
         events 'skipped'
     }
+}
+
+dependencyUpdates.resolutionStrategy {
+  componentSelection { rules ->
+    rules.all { ComponentSelection selection ->
+      boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm', 'pr', 'preview'].any { qualifier ->
+        selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
+      }
+      if (rejected) {
+        selection.reject('Release candidate')
+      }
+    }
+  }
 }
 
 publishing {
