--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,14 +22,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        jdk: ['8', '11', '15']
+        jdk: ['8', '11', '17']
         os: [ubuntu-latest]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK ${{ matrix.jdk }}
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
+        distribution: temurin
         java-version: ${{ matrix.jdk }}
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
@@ -37,3 +37,17 @@ jobs:
       run: ./gradlew check
     - name: Run codecov analysis
       uses: codecov/codecov-action@v1
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    name: Deploy
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK
+      uses: actions/setup-java@v2
+      with:
+        distribution: temurin
+        gpg-private-key: "${{ secrets.GPG_SIGNING_KEY }}"
+        java-version: '8'
+    - name: Deploy
+      run: ./gradlew publish -x test -PossrhUsername=${{ secrets.OSSRH_USERNAME }} -PossrhPassword=${{ secrets.OSSRH_PASSWORD }} -Psigning.password=${{ secrets.GPG_PASSPHRASE }}
